--- a/packages/react-devtools/client/index.html
+++ b/packages/react-devtools/client/index.html
@@ -2,53 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>React DevTools (Preview)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>React DevTools</title>
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
       body {
         font-family:
-          system-ui,
-          -apple-system,
-          BlinkMacSystemFont,
-          'Segoe UI',
-          sans-serif;
-        margin: 0;
-        background: #12131a;
-        color: #ffffff;
-        display: grid;
-        place-items: center;
+          -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+          'Droid Sans', 'Helvetica Neue', sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+      #root {
+        width: 100%;
         height: 100vh;
       }
-      main {
-        text-align: center;
-        max-width: 480px;
-        padding: 32px;
-        border-radius: 18px;
-        background: rgba(255, 255, 255, 0.04);
-        box-shadow: 0 20px 60px rgba(0, 0, 0, 0.35);
-      }
-      h1 {
-        font-size: 26px;
-        margin-bottom: 12px;
-        letter-spacing: 0.02em;
-      }
-      p {
-        color: rgba(255, 255, 255, 0.75);
-        font-size: 14px;
-        line-height: 1.6;
-      }
     </style>
+    <script type="module" crossorigin src="./assets/main-8IYdWGNo.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/main-C-ixeV7j.css">
   </head>
   <body>
-    <main>
-      <h1>React DevTools (Preview)</h1>
-      <p>
-        This workspace exposes an in-page overlay to visualize the component tree. The standalone panel experience is
-        under construction.
-      </p>
-      <p style="margin-top: 24px; font-size: 12px; opacity: 0.6">
-        Press <strong>Option&nbsp;+&nbsp;Shift&nbsp;+&nbsp;R</strong> inside your app to toggle the overlay if it was
-        closed.
-      </p>
-    </main>
+    <div id="root"></div>
   </body>
 </html>
