--- a/packages/react-devtools-client/index.html
+++ b/packages/react-devtools-client/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React DevTools</title>
+    <script>
+      // Setup Vite React Refresh preamble mocks to allow loading plugins from Vite server
+      window.__vite_plugin_react_preamble_installed__ = true
+      window.$RefreshReg$ = () => {}
+      window.$RefreshSig$ = () => (type) => type
+    </script>
     <style>
       * {
         margin: 0;
