fix: open-editor wip

--- a/packages/react-devtools/client/index.html
+++ b/packages/react-devtools/client/index.html
@@ -28,8 +28,8 @@
         height: 100vh;
       }
     </style>
-    <script type="module" crossorigin src="./assets/main-DJ4TVArx.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/main-Cu-lx074.css">
+    <script type="module" crossorigin src="./assets/main-CuAp8atj.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/main-D3kOrLxO.css">
   </head>
   <body>
     <div id="root"></div>
