--- a/packages/react-devtools/client/index.html
+++ b/packages/react-devtools/client/index.html
@@ -64,8 +64,8 @@
         height: 100vh;
       }
     </style>
-    <script type="module" crossorigin src="./assets/main-BSJm7Txg.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/main-B03ICUhC.css">
+    <script type="module" crossorigin src="./assets/main-D20DjQnU.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/main-NJKNRB6t.css">
   </head>
   <body>
     <div id="root"></div>
