--- a/packages/react-devtools/client/index.html
+++ b/packages/react-devtools/client/index.html
@@ -64,8 +64,8 @@
         height: 100vh;
       }
     </style>
-    <script type="module" crossorigin src="./assets/main-J_p6sFCt.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/main-DVOGIghv.css">
+    <script type="module" crossorigin src="./assets/main-Bl6ujlQ9.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/main-DGr9AF0V.css">
   </head>
   <body>
     <div id="root"></div>
