feat: refactor React DevTools integration across multiple components and update build scripts for improved performance and consistency

--- a/packages/react-devtools/client/index.html
+++ b/packages/react-devtools/client/index.html
@@ -64,8 +64,8 @@
         height: 100vh;
       }
     </style>
-    <script type="module" crossorigin src="./assets/main-DjnHXiE4.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/main-3GoQnPnW.css">
+    <script type="module" crossorigin src="./assets/main-DipjOXdg.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/main-slgE_1NU.css">
   </head>
   <body>
     <div id="root"></div>
