--- a/packages/react-devtools/client/index.html
+++ b/packages/react-devtools/client/index.html
@@ -64,7 +64,7 @@
         height: 100vh;
       }
     </style>
-    <script type="module" crossorigin src="./assets/main-H3G4V0_z.js"></script>
+    <script type="module" crossorigin src="./assets/main-BukLVorE.js"></script>
     <link rel="stylesheet" crossorigin href="./assets/main-slgE_1NU.css">
   </head>
   <body>
