chore: update ESLint configuration to ignore Umi framework generated files and enhance button accessibility across various components

--- a/packages/react-devtools/client/index.html
+++ b/packages/react-devtools/client/index.html
@@ -64,8 +64,8 @@
         height: 100vh;
       }
     </style>
-    <script type="module" crossorigin src="./assets/main-BrrZgGyr.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/main-slgE_1NU.css">
+    <script type="module" crossorigin src="./assets/main-CXu8PkRa.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/main-BAVzErdo.css">
   </head>
   <body>
     <div id="root"></div>
