--- a/packages/react-devtools/client/index.html
+++ b/packages/react-devtools/client/index.html
@@ -64,7 +64,7 @@
         height: 100vh;
       }
     </style>
-    <script type="module" crossorigin src="./assets/main-CBuoj2Fw.js"></script>
+    <script type="module" crossorigin src="./assets/main-kFPKrNHs.js"></script>
     <link rel="stylesheet" crossorigin href="./assets/main-BAVzErdo.css">
   </head>
   <body>
