--- a/packages/react-devtools/client/index.html
+++ b/packages/react-devtools/client/index.html
@@ -64,7 +64,7 @@
         height: 100vh;
       }
     </style>
-    <script type="module" crossorigin src="./assets/main-DtyDqq9s.js"></script>
+    <script type="module" crossorigin src="./assets/main-DS100G4X.js"></script>
     <link rel="stylesheet" crossorigin href="./assets/main-C0nDxEO1.css">
   </head>
   <body>
