--- a/packages/react-devtools/client/index.html
+++ b/packages/react-devtools/client/index.html
@@ -64,7 +64,7 @@
         height: 100vh;
       }
     </style>
-    <script type="module" crossorigin src="./assets/main-BRRM66PS.js"></script>
+    <script type="module" crossorigin src="./assets/main-QM--kt5W.js"></script>
     <link rel="stylesheet" crossorigin href="./assets/main-ZjJqjZGN.css">
   </head>
   <body>
